# django-product-backend

./: pyproject.toml
app/app/: settings.py  urls.py
app/products/: admin.py  models.py  urls.py  views.py
app/products/migrations/: 0001_initial.py  0002_alter_product_title.py  0003_alter_product_id.py  0004_alter_product_created_at_alter_product_description_and_more.py  0005_alter_product_created_at_alter_product_description_and_more.py  0006_product_price.py
app/products/templates/: product.html
